# coursework_2

./: pyproject.toml
src/: basic_word.py  config.py  main.py  players.py  utils.py
