[tool.poetry]
name = "coursework-2"
version = "0.1.0"
description = "coursework two"
authors = ["Kirill8769 <tkkrozn@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.lint.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"
isort = "^5.12.0"


[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = [".venv"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
